--- a/AndroidStudioProjects/MyCompassMAMN01/app/src/main/res/values/strings.xml
+++ b/AndroidStudioProjects/MyCompassMAMN01/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="edit_message">Enter a message</string>
     <string name="button_send">Send</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_display_message">My Message</string>
+
+    <string name="hello_world">Hello world!</string>
 </resources>
